--- a/templates/bounties/export.html
+++ b/templates/bounties/export.html
@@ -1,5 +1,65 @@
+{% load i18n %}
+{% load staticfiles %}
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <base href="{{ SITE_URL }}">
+  <style type="text/css">
+    @page {
+      margin: 0;
+      height: 140px;
+      width:450px;
+    }
+    body{font-family: 'Lato', sans-serif;color: #fff; margin: 0; padding: 0;}
+
+    #bloc-alliance{width:450px; height:140px;background-image: url('{% static "bountyomatic/img/export/bloc_ally.png" %}');}
+    #bloc-alliance .avatar img{width:84px;height:84px; float: left; margin-top:28px;margin-left: 32px; margin-right:12px;}
+
+    #bloc-horde{width:450px; height:140px;background-image: url('{% static "bountyomatic/img/export/bloc_horde.png" %}');}
+    #bloc-horde .avatar img{width:84px;height:84px; float: left; margin-top:28px;margin-left: 32px; margin-right:12px;}
+
+    .target{width:30px;height:30px;background-image: url('{% static "bountyomatic/img/export/target.png" %}');position: absolute;margin-top:80px;margin-left:82px;}
+    .infos {margin-top: 0;padding-top:35px;}
+    .infos h1{font-weight: 700; font-size: 22px; margin: 0px;}
+    .infos p{margin:0px; padding: 0px;}
+    .infos p.ally{color: #3498db;}
+    .infos p.horde{color: #dc4a42;}
+    .small {font-size:80%;}
+  </style>
+</head>
 <body>
-	<img src="{{ bounty.source_thumbnail }}">
-	wants to kill
-	<img src="{{ bounty.destination_thumbnail }}">
+{% if bounty.destination_faction == 0 %}
+  <!-- Signature Alliance -->
+  <div id="bloc-alliance">
+    <div class="avatar">
+      <div class="target"></div>
+      <img src="{{ bounty.destination_thumbnail }}"/>
+    </div>
+    <div class="infos">
+      <h1>{{ bounty.destination_character}}{% if bounty.destination_guild %} <span class="small">- {{ bounty.destination_guild|truncatechars:22 }}</span>{% endif %}</h1>
+      {%  if bounty.destination_class_display and bounty.get_destination_realm_display %}
+        <p>{{ bounty.destination_class_display }} - {{ bounty.get_destination_realm_display }}</p>
+      {% endif %}
+      <p class="horde">{% trans "Prime crée le" %} 13/04 {% trans "par" %} {{ bounty.source_character }}</p>
+    </div>
+  </div>
+  <!-- Signature Alliance FIN -->
+{% else %}
+  <!-- Signature Horde -->
+  <div id="bloc-horde">
+    <div class="avatar">
+      <div class="target"></div>
+      <img src="{{ bounty.destination_thumbnail }}"/>
+    </div>
+    <div class="infos">
+      <h1>{{ bounty.destination_character}}{% if bounty.destination_guild %} <span class="small">- {{ bounty.destination_guild|truncatechars:22 }}</span>{% endif %}</h1>
+      {%  if bounty.destination_class_display and bounty.get_destination_realm_display %}
+        <p>{{ bounty.destination_class_display }} - {{ bounty.get_destination_realm_display }}</p>
+      {% endif %}
+      <p class="ally">{% trans "Prime crée le" %} 13/04 {% trans "par" %} {{ bounty.source_character }}</p>
+    </div>
+  </div>
+  <!-- Signature Horde FIN -->
+{% endif %}
 </body>
+</html>
