--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -26,6 +26,7 @@
           <div class="row">
             <div class="col-md-2">
               <a href="{{ bounty.destination_armory }}" target="_blank">
+                <div class="target"></div>
                 <img class="img-rounded pull-left" src="{{ bounty.destination_thumbnail }}" onerror="this.onerror = null; this.src='{{ bounty.destination_thumbnail_fallback }}'">
               </a>
             </div>
