Fix typo on home

--- a/templates/accounts/home.html
+++ b/templates/accounts/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="jumbotron">
   <div class="container">
-    <h1>{% trans "Travel safe throught Azeroth!" %}</h1>
+    <h1>{% trans "Travel safe through Azeroth!" %}</h1>
     <p>{% trans "Someone waits for you in the dark? Spit on your corpse for the third time?<br>Is a double agent? Killed your cat?" %}</p>
     <ol>
 	    <li><strong>{% trans "Put a bounty on his head!" %}</strong> - <small>{% trans "Let's describe your Nemesis and found the perfect killer for him." %}</small></li>
