Only return player characters from bounty region

--- a/templates/bounties/add.html
+++ b/templates/bounties/add.html
@@ -389,7 +389,7 @@
       }
     });
 
-    getPlayerCharacters(function(data) {
+    getPlayerCharacters(null, function(data) {
       setPlayerCharacters(data);
       $("select#player-characters").chosen({no_results_text: "{% trans 'Oops, no character found!' %}"});
       if (getUrlParameter('update')) {
