Show all characters in coments for staff user

--- a/templates/bounties/detail.html
+++ b/templates/bounties/detail.html
@@ -352,7 +352,12 @@
         saveComment();
       });
 
-      getPlayerCharacters('{{ bounty.region }}', function(data) {
+      {% if user.is_staff %}
+        var region = '';
+      {% else %}
+        var region = '{{ bounty.region }}'
+      {% endif %}
+      getPlayerCharacters(region, function(data) {
         setPlayerCharacters(data);
       });
     });
