Fix opacity signature

--- a/templates/bounties/export.html
+++ b/templates/bounties/export.html
@@ -5,8 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <base href="{{ SITE_URL }}">
   <style type="text/css">
-    @page {margin: 0;height: 140px;width:450px;}
-    body{font-family: 'Lato', sans-serif;color: #fff; margin: 0; padding: 0;}
+    @page {margin: 0;height: 140px;width:450px;background-color:rgba(255, 255, 255, 0);}
+    body{font-family: 'Lato', sans-serif;color: #fff; margin: 0; padding: 0}
 
     #bloc-alliance{width:450px; height:140px;background-image: url('{% static "bountyomatic/img/export/bloc_ally.png" %}');}
     #bloc-alliance .avatar img{width:84px;height:84px; float: left; margin-top:28px;margin-left: 32px; margin-right:12px;}
