--- a/static/bountyomatic/css/custom.css
+++ b/static/bountyomatic/css/custom.css
@@ -126,3 +126,11 @@ img.character-thumbnail {
   width: 50px;
   height: 50px;
 }
+label, button, select, .chosen-results li, .chosen-container, .navbar {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
