--- a/static/bountyomatic/css/custom.css
+++ b/static/bountyomatic/css/custom.css
@@ -55,6 +55,13 @@ dl.bounty-detail dd,dt{
 .footer-refresh {
   color: #464545;
 }
+
+@media (max-width: 767px) {
+  #loading-bar {
+    margin: 0 auto;
+  }
+}
+
 div.chosen-container a.chosen-single {
   font-size: 15px;
   height: 43px;
