--- a/static/bountyomatic/css/custom.css
+++ b/static/bountyomatic/css/custom.css
@@ -108,13 +108,18 @@ div.chosen-container.chosen-container-active.chosen-with-drop a.chosen-single {
 #loading-bar {
   margin-left:0px;
   margin-right:-5px;
-  width:270px;
-  margin-top:16px;
+  margin-top:13px;
   margin-bottom:-16px;
-  height:30px
+  height:36px;
 }
 #loading-bar .progress-bar {
-  width:100%;padding-top:8px;font-weight:bold;font-size:90%
+  width:100%;
+  padding-top: 10px;
+  font-weight:bold;
+  font-size:90%;
+  padding-right: 10px;
+  padding-left: 10px;
+  line-height: 12px;
 }
 @media (max-width: 767px) {
   #loading-bar {
